		 received over the daemon socket while the engine 
		 was running the batchmode
	- fixed: a nasty bug in 'playat' implementation causing audible
		 artifacts ; see 
		 http://eca.cx/ecasound-list/2009/01/0089.html
	- fixed: sndfile and audiofile backends - emit a warning if 
		 a seek fails (e.g. when seeking beyond current 
		 end-of-file for output objects)
24082008 (v2.5.2) -** stable release **-
	- more verbose description of change available at:
                 http://eca.cx/relnotes/ecasound_v2_5_2_relnotes.txt
	- fixed: bug in channel routing of LADSPA plugins that have
		 more audio output ports than input ports
21082008 (v2.5.1) -** stable release **-
	- more verbose description of change available at:
                 http://eca.cx/relnotes/ecasound_v2_5_1_relnotes.txt
	- fixed: a last minute change in 2.5.0 that caused build errors
	 	 with gcc-4.3.1 if ALSA support is disabled
	- fixed: a change in 2.5.0 how process cleanup is initiated from 
		 the signal handler caused severe problems on some 
		 systems when ecasound was interrupted with e.g. 
	         ctrl-c/SIGINT; worst case was a crashed X session which
	         is of course really, really bad
 	- fixed: a bug in registering LADSPA plugins; on some systems
	         not all found plugins were registered properly to
	 	 ecasound's object maps causing some plugins to be
		 unusable;  errors 
16082008 (v2.5.0) -** stable release **-
	- more verbose description of change available at:
                 http://eca.cx/relnotes/ecasound_v2_5_0_relnotes.txt
	- notice: slightly modified the version numbering scheme -
		  minor version is incremented whenever non-trivial
		  new features are added
	- notice: verified to compile with minimal warnings with
	          gcc-4.3.1
	- edi-entries: edi-40 closed (Update to error and warning 
	               reporting mechanisms), edi-38 closed (see
		       edi-7 partially implemented
	- added: ecasound.el: added missing ECI commands cs-option, 