@@ -35,10 +35,10 @@ class AAC_FORKED_INTERFACE : public AUDIO_IO_BUFFERED,
   virtual std::string name(void) const { return("AAC stream"); }
   virtual std::string description(void) const { return("Interface to FAAC/FAAD encoder and decoder using UNIX pipe i/o."); }
   virtual std::string parameter_names(void) const { return("label"); }
-  virtual bool locked_audio_format(void) const { return(true); }
+  virtual bool locked_audio_format(void) const { return true; }
 
-  virtual int supported_io_modes(void) const { return(io_read | io_write); }
-  virtual bool supports_seeking(void) const { return(false); }
+  virtual int supported_io_modes(void) const { return (io_read | io_write); }
+  virtual bool supports_seeking(void) const { return false; }
 
   virtual void open(void) throw(AUDIO_IO::SETUP_ERROR &);
   virtual void close(void);
@@ -57,6 +57,14 @@ class AAC_FORKED_INTERFACE : public AUDIO_IO_BUFFERED,
   // --
   // Realtime related functions
   // --
+
+ protected:
+
+  /* functions called by AUDIO_IO_FORKED_STREAM that require
+   * the use of AUDIO_IO methods */
+
+  virtual bool do_supports_seeking(void) const { return supports_seeking(); }
+  virtual void do_set_position_in_samples(SAMPLE_SPECS::sample_pos_t pos) { set_position_in_samples(pos); }
   
  private:
 
