@@ -97,6 +97,11 @@ xx0y2009 (v2.6.0) -** stable release **-
 	- fixed: sndfile and audiofile backends - emit a warning if 
 		 a seek fails (e.g. when seeking beyond current 
 		 end-of-file for output objects)
+	- fixed: various improvements and fixes related to using
+		 non-seekable audio objects (especially interactive
+ 		 use); in most cases this means graceful recovery 
+	 	 from failed seek attempts, and correct reporting of
+	 	 the objects actual current position
 24082008 (v2.5.2) -** stable release **-
 	- more verbose description of change available at:
                  http://eca.cx/relnotes/ecasound_v2_5_2_relnotes.txt
